// Copyright Â© 2017-2018 Stratumn SAS
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program. If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

import "github.com/stratumn/go-node/cli/grpc/ext/ext.proto";

package stratumn.node.core.app.swarm.grpc;

option go_package = "github.com/stratumn/go-node/core/app/swarm/grpc;grpc";

// The swarm service definition.
service Swarm {
  // Returns the local peer.
  rpc LocalPeer (LocalPeerReq) returns (Peer) {
    option (stratumn.node.cli.ext.method_desc) = "Display the local peer";
  }

  // Streams the connected peers.
  rpc Peers (PeersReq) returns (stream Peer) {
    option (stratumn.node.cli.ext.method_desc) = "List all the connected peers";
  }

  // Streams connections.
  rpc Connections (ConnectionsReq) returns (stream Connection) {
    option (stratumn.node.cli.ext.method_desc) = "List connections to peers";
  }
}

// The local peer request message.
message LocalPeerReq {
}

// The peers request message.
message PeersReq {
}

// The connections request message.
message ConnectionsReq {
  bytes peer_id = 1 [
    (stratumn.node.cli.ext.field_desc) = "Show only connections to this peer",
    (stratumn.node.cli.ext.field_base58) = true
  ];
}

// The peer message containing the ID of the peer.
message Peer {
  bytes id = 1 [(stratumn.node.cli.ext.field_base58) = true];
}

// The connection message containing the peer ID and addresses.
message Connection {
    bytes peer_id = 1 [(stratumn.node.cli.ext.field_base58) = true];
    bytes local_address = 2 [(stratumn.node.cli.ext.field_multiaddr) = true];
    bytes remote_address = 3 [(stratumn.node.cli.ext.field_multiaddr) = true];
}